# portfolio

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  client.ts  deno.json  drizzle.config.ts  fly.toml  fresh.gen.ts  main.ts  manifest.ts  package.json  project.json  utils.ts  vite.config.ts
.zed/: settings.json  tasks.json
backend/: Cargo.toml  base.html  build.rs  project.json  rustfmt.toml
backend/.cargo/: config.toml
backend/data/: data.json
backend/src/: main.rs  templates.rs
backend/src/routes/: api.rs  assets.rs  mail.rs  mod.rs  pages.rs
backend/src/types/: data.rs  lastfm.rs  mod.rs
backend/static/: 458C71D0-E9CF-4F03-99BC-74E07A1C256F_1_201_a.heic  robots.txt  sitemap.xml  styles.css
backend/templates/: base.html
components/: ComponentLayout.tsx  Entry.tsx  Footer.tsx  SectionHeader.tsx
data/: github-repos.seed.json
drizzle/: 0000_thin_valeria_richards.sql  0001_aspiring_machine_man.sql  0002_structured_locale_sections.sql  0003_bininspect_artifacts.sql  0004_github_repo_cache.sql  0005_locale_hero_currently_building.sql  0006_locale_buttons_resume.sql
frontend/: .gitignore  biome.json  index.html  package.json  project.json  tsconfig.json  vite.config.ts
islands/: BinInspect.tsx  Entry.tsx  ExperienceRepos.tsx  ExternalLink.tsx  Header.tsx  HeaderMobileMenu.tsx  NavItem.tsx  OptimizedImage.tsx  ProjectCard.tsx  ProjectCardExpander.tsx  SmoothScrollButton.tsx  ThemeToggle.tsx
lib/: assets.ts  bininspect.ts  github.ts  i18n.ts  locale.ts  locale_route.ts  page_data.ts  schemas.ts  security.ts  (+1 more)
(+154 files in other folders)
