[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.15.0"
askama-derive-axum = "0.1.4"
axum = "0.8.9"
axum-core = "=0.5.6"
http = "=1.4.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt-multi-thread"]}
tower-http = { version = "0.6", features = ["fs"] }
tracing = "=0.1.44"
ts-rs = "12.0.1"
