[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ts-rs = "12.0.1"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-core = "=0.5.6"
http = "=1.4.0"
resend-rs = "0.24.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt-multi-thread"]}
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-full", "set-header", "trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
ts-rs = "12.0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
